--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,22 +53,24 @@
     <Button
         android:id="@+id/twenty_button"
         style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="74dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginBottom="136dp"
-        android:backgroundTint="#2196F3"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:backgroundTint="@color/light_brown"
         android:text="20%"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fifteen_button" />
+        app:layout_constraintEnd_toStartOf="@+id/thirty_button"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/fifteen_button"
+        app:layout_constraintTop_toTopOf="@+id/fifteen_button" />
 
     <Button
         android:id="@+id/ten_button"
         style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="62dp"
-        android:layout_height="35dp"
-        android:layout_marginBottom="132dp"
-        android:backgroundTint="#2196F3"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="128dp"
+        android:backgroundTint="@color/light_brown"
         android:text="10%"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/fifteen_button"
@@ -78,92 +80,59 @@
     <Button
         android:id="@+id/fifteen_button"
         style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="54dp"
-        android:layout_height="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="132dp"
-        android:backgroundTint="#2196F3"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:backgroundTint="@color/light_brown"
         android:text="15%"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/twenty_button" />
+        app:layout_constraintEnd_toStartOf="@+id/twenty_button"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/ten_button"
+        app:layout_constraintTop_toTopOf="@+id/ten_button" />
 
     <Button
         android:id="@+id/thirty_button"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="70dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="132dp"
-        android:backgroundTint="#2196F3"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/light_brown"
         android:text="30%"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/twenty_button" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/twenty_button"
+        app:layout_constraintTop_toTopOf="@+id/twenty_button" />
 
     <TextView
         android:id="@+id/tips_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="68dp"
         android:text="Tips"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/base_label"
         app:layout_constraintTop_toBottomOf="@+id/base_label" />
 
     <TextView
         android:id="@+id/base_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="92dp"
-        android:text="Base"
+        android:text="Bill"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tipPercentage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="44dp"
-        android:layout_marginTop="84dp"
-        android:text="24%"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/total_label" />
-
-    <TextView
-        android:id="@+id/total_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="88dp"
-        android:text="Total"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tips_label" />
 
     <!-- stuff on the right side -->
-
-    <EditText
-        android:id="@+id/billAmount"
-        android:layout_width="195dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="80dp"
-        android:ems="8"
-        android:hint="Bill Amount"
-        android:inputType="numberDecimal"
-        app:layout_constraintStart_toEndOf="@+id/base_label"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tipAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="56dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toEndOf="@+id/tips_label"
         app:layout_constraintStart_toStartOf="@+id/billAmount"
         app:layout_constraintTop_toBottomOf="@+id/billAmount"
         tools:text="19.96" />
@@ -172,21 +141,73 @@
         android:id="@+id/totalAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="56dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toEndOf="@+id/total_label"
         app:layout_constraintStart_toStartOf="@+id/tipAmount"
         app:layout_constraintTop_toBottomOf="@+id/tipAmount"
         tools:text="105.12" />
+
+    <EditText
+        android:id="@+id/billAmount"
+        android:layout_width="195dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="80dp"
+        android:ems="8"
+        android:hint="Type Bill Amount"
+        android:inputType="numberDecimal"
+        app:layout_constraintStart_toEndOf="@+id/base_label"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <SeekBar
         android:id="@+id/seekBarSlide"
         android:layout_width="220dp"
         android:layout_height="33dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="60dp"
         android:max="30"
-        app:layout_constraintStart_toEndOf="@+id/tipPercentage"
         app:layout_constraintStart_toStartOf="@+id/totalAmount"
         app:layout_constraintTop_toBottomOf="@+id/totalAmount" />
+
+    <TextView
+        android:id="@+id/total_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Total"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="@+id/tips_label"
+        app:layout_constraintTop_toBottomOf="@+id/tips_label" />
+
+    <TextView
+        android:id="@+id/tipPercentage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="24%"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="@+id/total_label"
+        app:layout_constraintTop_toBottomOf="@+id/total_label" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="made by Eddie"
+        android:textAllCaps="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tipDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/seekBarSlide"
+        app:layout_constraintStart_toStartOf="@+id/seekBarSlide"
+        app:layout_constraintTop_toBottomOf="@+id/seekBarSlide"
+        tools:text="Acceptable" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
