--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,92 +6,109 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!--    <Button-->
-    <!--        android:id="@+id/p25"-->
-    <!--        android:layout_width="80dp"-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:layout_marginStart="8dp"-->
-    <!--        android:layout_marginTop="4dp"-->
-    <!--        android:text="25%"-->
-    <!--        app:layout_constraintStart_toEndOf="@+id/p20"-->
-    <!--        app:layout_constraintTop_toTopOf="@+id/p20" />-->
 
-    <!--    <Button-->
-    <!--        android:id="@+id/p15"-->
-    <!--        android:layout_width="80dp"-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:layout_marginStart="4dp"-->
-    <!--        android:layout_marginTop="108dp"-->
-    <!--        android:text="15%"-->
-    <!--        app:layout_constraintStart_toEndOf="@+id/p10"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/seekBar" />-->
+    <TextView
+        android:id="@+id/tvTipAmountLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Tips"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="@+id/tvBillAmountLabel"
+        app:layout_constraintTop_toBottomOf="@+id/tvBillAmountLabel" />
 
-    <!--    <Button-->
-    <!--        android:id="@+id/p20"-->
-    <!--        android:layout_width="80dp"-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:layout_marginStart="8dp"-->
-    <!--        android:layout_marginTop="108dp"-->
-    <!--        android:text="20%"-->
-    <!--        app:layout_constraintStart_toEndOf="@+id/p15"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/seekBar" />-->
-
-    <!--    <Button-->
-    <!--        android:id="@+id/p10"-->
-    <!--        android:layout_width="80dp"-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:layout_marginStart="32dp"-->
-    <!--        android:layout_marginTop="108dp"-->
-    <!--        android:background="#F44336"-->
-    <!--        android:backgroundTint="#811C1C"-->
-    <!--        android:text="10%"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/totalAmount2" />-->
-
-    <!-- text on left side -->
-
-    <Button
-        android:id="@+id/twenty_button"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:backgroundTint="@color/light_brown"
-        android:text="20%"
-        app:layout_constraintEnd_toStartOf="@+id/thirty_button"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/fifteen_button"
-        app:layout_constraintTop_toTopOf="@+id/fifteen_button" />
-
-    <Button
-        android:id="@+id/ten_button"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
+    <TextView
+        android:id="@+id/tvBillAmountLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginBottom="128dp"
-        android:backgroundTint="@color/light_brown"
-        android:text="10%"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fifteen_button"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="92dp"
+        android:text="Bill Amount"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- stuff on the right side -->
+
+    <TextView
+        android:id="@+id/tvTipAmount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="@+id/tvTipAmountLabel"
+        app:layout_constraintStart_toStartOf="@+id/etBillAmount"
+        tools:text="19.96" />
+
+    <TextView
+        android:id="@+id/totalAmount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="@+id/tvTotalAmountLabel"
+        app:layout_constraintStart_toStartOf="@+id/tvTipAmount"
+        tools:text="105.12" />
+
+    <EditText
+        android:id="@+id/etBillAmount"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:ems="8"
+        android:hint="Type Bill Amount"
+        android:inputType="numberDecimal"
+        app:layout_constraintBottom_toBottomOf="@+id/tvBillAmountLabel"
+        app:layout_constraintStart_toEndOf="@+id/tvBillAmountLabel" />
+
+    <SeekBar
+        android:id="@+id/sbTipPercentage"
+        android:layout_width="180dp"
+        android:layout_height="36dp"
+        android:max="30"
+        app:layout_constraintBottom_toBottomOf="@+id/tvCurrTipPercentage"
+        app:layout_constraintStart_toStartOf="@+id/totalAmount" />
+
+    <TextView
+        android:id="@+id/tvTotalAmountLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Total Amount"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="@+id/tvTipAmountLabel"
+        app:layout_constraintTop_toBottomOf="@+id/tvTipAmountLabel" />
+
+    <TextView
+        android:id="@+id/tvCurrTipPercentage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="24%"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="@+id/tvTotalAmountLabel"
+        app:layout_constraintTop_toBottomOf="@+id/tvTotalAmountLabel" />
+
+    <TextView
+        android:id="@+id/tvTipDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/sbTipPercentage"
+        app:layout_constraintStart_toStartOf="@+id/sbTipPercentage"
+        app:layout_constraintTop_toBottomOf="@+id/sbTipPercentage"
+        tools:text="Acceptable" />
+
+    <TextView
+        android:id="@+id/tvSplit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="Split"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="@+id/tvCurrTipPercentage"
+        app:layout_constraintTop_toBottomOf="@+id/tvCurrTipPercentage" />
 
     <Button
-        android:id="@+id/fifteen_button"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:backgroundTint="@color/light_brown"
-        android:text="15%"
-        app:layout_constraintEnd_toStartOf="@+id/twenty_button"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/ten_button"
-        app:layout_constraintTop_toTopOf="@+id/ten_button" />
-
-    <Button
-        android:id="@+id/thirty_button"
+        android:id="@+id/btnThirtyPct"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="70dp"
         android:layout_height="50dp"
@@ -101,113 +118,94 @@
         android:text="30%"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/twenty_button"
-        app:layout_constraintTop_toTopOf="@+id/twenty_button" />
+        app:layout_constraintStart_toEndOf="@+id/btnTwentyPct"
+        app:layout_constraintTop_toTopOf="@+id/btnTwentyPct" />
 
-    <TextView
-        android:id="@+id/tips_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:text="Tips"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="@+id/base_label"
-        app:layout_constraintTop_toBottomOf="@+id/base_label" />
-
-    <TextView
-        android:id="@+id/base_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="92dp"
-        android:text="Bill"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <!-- stuff on the right side -->
-
-    <TextView
-        android:id="@+id/tipAmount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toStartOf="@+id/billAmount"
-        app:layout_constraintTop_toBottomOf="@+id/billAmount"
-        tools:text="19.96" />
-
-    <TextView
-        android:id="@+id/totalAmount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintStart_toStartOf="@+id/tipAmount"
-        app:layout_constraintTop_toBottomOf="@+id/tipAmount"
-        tools:text="105.12" />
-
-    <EditText
-        android:id="@+id/billAmount"
-        android:layout_width="195dp"
-        android:layout_height="56dp"
+    <Button
+        android:id="@+id/btnTenPct"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="80dp"
-        android:ems="8"
-        android:hint="Type Bill Amount"
-        android:inputType="numberDecimal"
-        app:layout_constraintStart_toEndOf="@+id/base_label"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <SeekBar
-        android:id="@+id/seekBarSlide"
-        android:layout_width="220dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="60dp"
-        android:max="30"
-        app:layout_constraintStart_toStartOf="@+id/totalAmount"
-        app:layout_constraintTop_toBottomOf="@+id/totalAmount" />
-
-    <TextView
-        android:id="@+id/total_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:text="Total"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="@+id/tips_label"
-        app:layout_constraintTop_toBottomOf="@+id/tips_label" />
-
-    <TextView
-        android:id="@+id/tipPercentage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:text="24%"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="@+id/total_label"
-        app:layout_constraintTop_toBottomOf="@+id/total_label" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:text="made by Eddie"
-        android:textAllCaps="true"
+        android:layout_marginBottom="150dp"
+        android:backgroundTint="@color/light_brown"
+        android:text="10%"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintEnd_toStartOf="@+id/btnFifteenPct"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/btnFifteenPct"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:backgroundTint="@color/light_brown"
+        android:text="15%"
+        app:layout_constraintEnd_toStartOf="@+id/btnTwentyPct"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btnTenPct"
+        app:layout_constraintTop_toTopOf="@+id/btnTenPct" />
+
+    <Button
+        android:id="@+id/btnTwentyPct"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:backgroundTint="@color/light_brown"
+        android:text="20%"
+        app:layout_constraintEnd_toStartOf="@+id/btnThirtyPct"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btnFifteenPct"
+        app:layout_constraintTop_toTopOf="@+id/btnFifteenPct" />
+
+    <EditText
+        android:id="@+id/etSplitCount"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Number of People"
+        android:inputType="textPersonName"
+        app:layout_constraintStart_toStartOf="@+id/sbTipPercentage"
+        tools:layout_editor_absoluteY="319dp" />
+
     <TextView
-        android:id="@+id/tipDescription"
+        android:id="@+id/tvSplitTipLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/seekBarSlide"
-        app:layout_constraintStart_toStartOf="@+id/seekBarSlide"
-        app:layout_constraintTop_toBottomOf="@+id/seekBarSlide"
-        tools:text="Acceptable" />
+        android:text="Split Tips"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="@+id/tvSplit"
+        tools:layout_editor_absoluteY="391dp" />
+
+    <TextView
+        android:id="@+id/tvSplitTotalLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Split Total"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="@+id/tvSplitTipLabel"
+        tools:layout_editor_absoluteY="444dp" />
+
+    <TextView
+        android:id="@+id/tvSplitTipActual"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="50"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="@+id/etSplitCount"
+        tools:layout_editor_absoluteY="391dp" />
+
+    <TextView
+        android:id="@+id/tvSplitTotalActual"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="100"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="@+id/tvSplitTipActual"
+        tools:layout_editor_absoluteY="444dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
