--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,23 +10,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="fill_horizontal">
 
         <TextView
             android:id="@+id/tvBillAmountLabel"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Bill Amount"
-            android:layout_weight="0.5" />
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
         <EditText
             android:id="@+id/etBillAmount"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:ems="8"
             android:hint="Enter Bill Amount"
             android:inputType="numberDecimal"
-            android:layout_weight="0.5"/>
+            android:textAlignment="center" />
 
     </LinearLayout>
     <LinearLayout
@@ -36,17 +40,21 @@
 
         <TextView
             android:id="@+id/tvTipAmountLabel"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Tip"
-            android:layout_weight="0.5" />
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/tvTipAmount"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="$ 32.45"
-            android:layout_weight="0.5" />
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
     </LinearLayout>
 
@@ -58,17 +66,21 @@
 
         <TextView
             android:id="@+id/tvTotalAmountLabel"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Total"
-            android:layout_weight="0.5"/>
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/tvTotalAmount"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:text="$ 19.96"
-            android:layout_weight="0.5"/>
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            tools:text="$ 19.96" />
 
     </LinearLayout>
 
@@ -81,7 +93,9 @@
             android:id="@+id/tvSplitNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Split"/>
+            android:text="Split"
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
 <!--        Number of people for splits-->
 
@@ -94,15 +108,46 @@
 
         <TextView
             android:id="@+id/tvSplitTipLabel"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Split Tip"/>
+            android:layout_weight="1"
+            android:text="Split Tip"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/tvSplitTip"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="$4.56"/>
+            android:layout_weight="1"
+            android:text="$4.56"
+            android:textAlignment="center"
+            android:textSize="30sp" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:paddingBottom="30dp">
+
+        <TextView
+            android:id="@+id/tvSplitTotalLabel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Split Total"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/tvSplitTotal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="$23.56"
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
 
     </LinearLayout>
@@ -110,40 +155,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="30dp">
-
-        <TextView
-            android:id="@+id/tvSplitTotalLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Split Total"/>
-
-        <TextView
-            android:id="@+id/tvSplitTotal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="$23.56"/>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvTipPercentage"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="15%"/>
+            android:layout_weight="0.3"
+            android:text="15%"
+            android:textSize="30sp" />
 
         <SeekBar
             android:id="@+id/sbTipPercentage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:max="30"/>
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.7"
+            android:max="30" />
     </LinearLayout>
 
     <LinearLayout
