--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="fill_horizontal">
+        android:paddingBottom="30dp"
+        android:paddingTop="30dp">
 
         <TextView
             android:id="@+id/tvBillAmountLabel"
@@ -30,7 +31,8 @@
             android:ems="8"
             android:hint="Enter Bill Amount"
             android:inputType="numberDecimal"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="30sp"/>
 
     </LinearLayout>
     <LinearLayout
@@ -61,8 +63,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="30dp">
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/tvTotalAmountLabel"
@@ -87,7 +88,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp">
 
         <TextView
             android:id="@+id/tvSplitNum"
@@ -112,6 +115,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Split Tip"
+            android:textAlignment="center"
             android:textSize="30sp" />
 
         <TextView
@@ -129,8 +133,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:paddingBottom="30dp">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvSplitTotalLabel"
@@ -138,6 +141,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Split Total"
+            android:textAlignment="center"
             android:textSize="30sp" />
 
         <TextView
@@ -155,7 +159,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp">
 
         <TextView
             android:id="@+id/tvTipPercentage"
@@ -163,6 +169,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.3"
             android:text="15%"
+            android:textAlignment="center"
             android:textSize="30sp" />
 
         <SeekBar
@@ -180,27 +187,31 @@
 
         <Button
             android:id="@+id/btnTenPct"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="10%"
+            android:layout_weight="1"
             />
         <Button
             android:id="@+id/btnFifteenPct"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="15%"
+            android:layout_weight="1"
             />
         <Button
             android:id="@+id/btnTwentyPct"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="20%"
+            android:layout_weight="1"
             />
         <Button
             android:id="@+id/btnThirtyPct"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="30%"
+            android:layout_weight="1"
             />
 
     </LinearLayout>
