--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,13 +94,24 @@
 
         <TextView
             android:id="@+id/tvSplitNum"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Split"
             android:textAlignment="center"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:layout_weight="1"/>
 
-<!--        Number of people for splits-->
+        <EditText
+            android:id="@+id/etSplitNum"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="8"
+            android:inputType="number"
+            android:text="1"
+            android:hint="# People"
+            android:textSize="30sp"
+            android:textAlignment="center"/>
 
     </LinearLayout>
 
@@ -230,16 +241,19 @@
             android:text="Custom (%)"
             android:textSize="30sp"
             android:layout_weight="1"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:visibility="invisible"/>
 
         <EditText
+            android:id="@+id/etCustomTip"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="Enter Tip"
             android:textSize="30sp"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:ems="8"/>
+            android:ems="8"
+            android:visibility="invisible"/>
 
 
     </LinearLayout>
