--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:colorBackground">@color/beige</item>
+        <item name="android:fontFamily">@font/itim</item>
+        <item name="fontFamily">@font/itim</item>
 
     </style>
 </resources>
