--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,6 +117,31 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvSplitBillLabel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Split Bill"
+            android:textAlignment="center"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/tvSplitBill"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:textSize="30sp" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
@@ -200,13 +225,14 @@
             android:layout_height="wrap_content"
             android:text="10%"
             android:layout_weight="1"
-            />
+            android:textStyle="bold"/>
         <Button
             android:id="@+id/btnFifteenPct"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="15%"
             android:layout_weight="1"
+            android:textStyle="bold"
             />
         <Button
             android:id="@+id/btnTwentyPct"
@@ -214,6 +240,7 @@
             android:layout_height="wrap_content"
             android:text="20%"
             android:layout_weight="1"
+            android:textStyle="bold"
             />
         <Button
             android:id="@+id/btnCustomTip"
@@ -221,6 +248,7 @@
             android:layout_height="wrap_content"
             android:text="Custom"
             android:layout_weight="1.6"
+            android:textStyle="bold"
             />
 
     </LinearLayout>
