--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="grey">#808080</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="beige">#F6E2C6</color>
-    <color name="brown">#543B2D</color>
-    <color name="worst">#E02900</color>
-    <color name="best">#3CC870</color>
-    <color name="light_brown">#C39B77</color>
-    <color name="mint">#CFF0CC</color>
-    <color name="grey">#808080</color>
+    <color name="red">#FF0000</color>
+
+    <!-- Primary brand color. -->
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryVariant">#52c7b8</color>
+    <color name="colorOnPrimary">#00675b</color>
+    <!-- Secondary brand color. -->
+    <color name="colorSecondary">#80cbc4</color>
+    <color name="colorSecondaryVariant">#b2fef7</color>
+    <color name="colorOnSecondary">#4f9a94</color>
+
+    <!-- Dark Mode Primary brand color. -->
+    <color name="colorPrimaryDark">#BB86FC</color>
+    <color name="colorPrimaryVariantDark">#3700B3</color>
+    <color name="colorOnPrimaryDark">#000000</color>
+    <!-- Dark Mode Secondary brand color. -->
+    <color name="colorSecondaryDark">#03DAC6</color>
+    <color name="colorSecondaryVariantDark">#03DAC6</color>
+    <color name="colorOnSecondaryDark">@color/black</color>
+
 </resources>
