--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,8 +6,8 @@
         <item name="colorPrimaryVariant">@color/colorPrimaryVariantDark</item>
         <item name="colorOnPrimary">@color/colorOnPrimaryDark</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/colorSecondaryDark</item>
-        <item name="colorSecondaryVariant">@color/colorSecondaryVariantDark</item>
+        <item name="colorSecondary">@color/colorPrimaryDark</item>
+        <item name="colorSecondaryVariant">@color/colorPrimaryVariantDark</item>
         <item name="colorOnSecondary">@color/colorOnSecondaryDark</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSecondaryVariant</item>
