--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,5 +14,6 @@
         <!-- Customize your theme here. -->
         <item name="android:colorBackground">@color/black</item>
         <item name="fontFamily">@font/itim</item>
+<!--        <item name="android:textColorPrimary">@color/white</item>-->
     </style>
 </resources>
